Replace usage of guava's ImmutableMap